plugins {
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java'
    id "com.github.ben-manes.versions" version "0.51.0"
}

group 'com.stlmpp.spigot.plugins'
version '2.0.0'

repositories {
    mavenCentral()
    maven { url = uri("https://repo.papermc.io/repository/maven-public/") }
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
}

dependencies {
    implementation 'io.reactivex.rxjava3:rxjava:3.1.+'
    compileOnly 'org.jetbrains:annotations:24.1.+'
    compileOnly 'io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0-M2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0-M2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0-M22'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0-M2'
}

shadowJar {
    archiveClassifier.set('')
}

test {
    useJUnitPlatform()
}

processResources {
    doFirst {
        file("$layout.buildDirectory/resources/main").listFiles().each {
            it.delete()
        }
    }
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(22))
}